[package]
name = "yutu"
version = "0.1.0"
description = "Modern Lua linter"
repository = "https://github.com/0x2a-42/yutu"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
keywords = ["linter", "lua"]
categories = ["parser-implementations"]

[[bin]]
name = "yutu"

[lib]
crate-type = ["lib"]

[dependencies]
logos = "0.16"
annotate-snippets = "0.12"
rustc-hash = "2.1"
smallvec = "1.15"
typed-arena = "2.0"
indoc = "2.0"
anstream = "0.6"
clap = "4.5"
toml = "1.0"
rayon = "1.11"
unicode-width = "0.2"
hexf-parse = "=0.2.1"

[build-dependencies]
lelwel = "0.10"

[dev-dependencies]
annotate-snippets = { version = "0.12", features = ["testing-colors"] }
snapbox = { version = "0.6.0", features = ["diff", "term-svg", "cmd", "examples"] }
